# user-servers/src/main/java/com/github/n0m44/api/UserApiImpl.java
@@ -5,30 +5,32 @@ import org.openapitools.model.UserDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 
+import java.util.List;
+
 @Controller
 public class UserApiImpl implements UserApi {
     @Override
-    public ResponseEntity<UserDto> createUser(Object id, UserDto userDto) {
-        return UserApi.super.createUser(id, userDto);
+    public ResponseEntity<UserDto> createUser(UserDto userDto) {
+        return UserApi.super.createUser(userDto);
     }
 
     @Override
-    public ResponseEntity<Void> deleteUser(Object id) {
+    public ResponseEntity<Void> deleteUser(Integer id) {
         return UserApi.super.deleteUser(id);
     }
 
     @Override
-    public ResponseEntity<UserDto> getUser(Object id) {
+    public ResponseEntity<UserDto> getUser(Integer id) {
         return UserApi.super.getUser(id);
     }
 
     @Override
-    public ResponseEntity<Object> getUsers() {
+    public ResponseEntity<List<UserDto>> getUsers() {
         return UserApi.super.getUsers();
     }
 
     @Override
-    public ResponseEntity<UserDto> updateUser(Object id, UserDto userDto) {
+    public ResponseEntity<UserDto> updateUser(Integer id, UserDto userDto) {
         return UserApi.super.updateUser(id, userDto);
     }
 }
